--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -52,9 +52,9 @@ The examples illustrate the idea of validity – conclusiveness in virtue of str
 
 \section{Sentence Trees and Canonical Clauses}\label{ss.canonical}
 
-Since arguments are made of sentences, the logical structure of an argument will be related to the grammatical structure of the sentences within it. We've already seen in §\ref{s:truthvalues} that arguments are made up of declarative sentences. One standard way of analysing the grammatical structure of a declarative sentence is to break it into constituent phrases (such approaches are known as  \define{phrase structure grammars}). The kind of structure is usefully depicted in a hierarchical \define{syntactic tree}. So we might consider the example \begin{earg}
+Since arguments are made of sentences, the logical structure of an argument will be related to the grammatical structure of the sentences within it. We've already seen in §\ref{s:truthvalues} that arguments are made up of declarative sentences. One standard way of analysing the grammatical structure of a declarative sentence is to break it into constituent phrases. Such approaches are known as  \define{phrase structure grammars}. These structures are usefully depicted in a hierarchical \define{syntactic tree}. Consider the example: \begin{earg}
 	\item[\ex{tariq}] Tariq is a man.
-\end{earg} This sentence can be divided into two main parts: the \define{noun phrase} `Tariq', and the \define{verb phrase} `is a man'. In this example, the verb phrase itself divides into the verb `is' and the \define{determiner phrase} `a man'. We will return to the internal structure of sentences in §\ref{s:FOLBuildingBlocks}. This phrase structure is depicted in the tree in Figure \ref{fig:tariq}. 
+\end{earg} This sentence (phrase of type S) can be divided into two main parts: the \define{noun phrase} `Tariq' (type NP), and the \define{verb phrase} `is a man' (type VP). In this example, the verb phrase itself divides into the verb `is' and the \define{determiner phrase} `a man' (type DP). We will return to the internal structure of sentences in §\ref{s:FOLBuildingBlocks}. This phrase structure is depicted in the tree in Figure \ref{fig:tariq}.
 \begin{figure}
 \begin{tikzpicture}[sibling distance=16pt]
 	\Tree [.S [.NP Tariq ] [.VP is [.DP a man ] ] ]
@@ -64,7 +64,7 @@ Since arguments are made of sentences, the logical structure of an argument will
 
 Let's look at a more complicated example. Consider \begin{earg}
 	\item[\ex{alice}] Alice will ace the test, or Bob will.
-\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{This kind of ellision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words. (See Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6.)} The full tree, with the elided phrase supplied (shown with the label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, connected by the coordinator `or'.
+\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{A closely related example is discussed by Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6. He argues that this kind of ellision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words.} The full tree, with the elided phrase supplied (marked by having the VP label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, or \define{subsentences}, connected by the coordinator `or'.
 \begin{figure}
 \begin{tikzpicture}[sibling distance=13pt]
  	\Tree [.S [.S [.NP Alice ] [.VP will [.VP ace [.DP the test ] ] ] ] [ [.Coord or ] [.S [.NP Bob ] [.VP will [.\node[draw]{VP}; \edge[roof]; {ace the test}  ] ] ] ] ]
@@ -73,32 +73,29 @@ Let's look at a more complicated example. Consider \begin{earg}
 
 When analysing the structure of compound sentences, a useful notion is that of a \define{canonical clause}.\footnote{A fuller treatment of canonical clauses can be found in Rodney Huddleston and Geoffrey Pullum, \emph{A Student's Introduction to English Grammar}, Cambridge University Press, 2005, pp. 24–5.} These are the simplest units of English sentences that can constitute a sentence by themselves. Here are some examples: 
 \begin{earg}
-	\item[\ex{cc1}] It is raining.
-	\item[\ex{cc2}] Jenny is happy.
+	\item[\ex{cc1}] They knew the victim.
 	\item[\ex{cc3}] She has read your article.
-	\item[\ex{cc4}] They knew the victim.
+	\item[\ex{cc2}] Jenny is happy.
 \end{earg}
 A canonical clause has internal structure too, but its parts are not themselves sentences. It is composed of a \define{grammatical subject}, typically but not always a noun phrase (`Jenny', `She'), and a \define{predicate}, always a verb phrase (`knew the victim', `is happy'). 
 
 The following, in contrast with the previous examples, are non-canonical clauses: 
 \begin{earg}
-	\item[\ex{nc1}] It is \underline{not} raining
-	\item[\ex{nc2}] She says that \underline{Jenny is happy}.
+	\item[\ex{nc1}] They \underline{did not} know the victim.
 	\item[\ex{nc3}] She has read your article \underline{and} she vehemently disagrees with it.
-	\item[\ex{nc4}] The victim was known to them.
+	\item[\ex{nc2}] She says that \underline{Jenny is happy}.
 \end{earg} These give us some characteristics of canonical clauses:
 \begin{itemize}
 	\item They are \emph{positive}, as in \ref{cc1}, rather than negative, as indicated by the underlined `not' in \ref{nc1}.
-	\item The underlined clause in \ref{nc2} is a \emph{subordinate} clause, part of a more complex clause. Canonical clauses are main clauses, as in \ref{cc2}.
 	\item Canonical clauses are simple, and not coordinated with any other clause, as in \ref{cc3}. In \ref{nc3}, the \define{coordinator} `and' links two clauses that would be canonical on their own into a longer \define{compound} sentence.
-	\item They are active, as in \ref{cc4}, not passive as in \ref{nc4}.
+	\item The underlined clause in \ref{nc2} is a \emph{subordinate} clause, part of a more complex clause. Canonical clauses are main clauses, as in \ref{cc2}.
 \end{itemize}
-
-This is not a linguistics course, so we are not concerned directly with understanding English grammar. But the idea of a canonical clause is very important for the logic we are examining in this part of the course. Sentential logic is, more or less, the logic that helps us understand and analyse arguments in terms of their constituent canonical clauses. 
 
 \section{Identifying argument structure}\label{ss.idargstr}
 
-How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}, the \define{structural words}. This connects with what we have just been saying, because in many of the examples from §\ref{s:ValidityInVirtueOfForm}, the arguments can be analysed as involving canonical clauses, perhaps linked by the structural words `and', `or', `not', `if … then …' and `… if and only if …'. So our efforts to identify the logical structure of arguments often coincide with linguist's efforts to identify the canonical clauses that constitute the sentences in those arguments – or, at least, constitute some plausible paraphrase or reformulation of those sentences.
+Our topic is not English grammar. But the idea of a canonical clause is illuminating for the logic we are examining in this part of the course. Sentential logic is, more or less, the logic that helps us understand and analyse arguments whose conclusiveness depends on their constituent canonical clauses and how they are joined together, particularly by coordinating expressions like `or' and `if' and by negative expressions like `not'.
+
+How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}, the \define{structural words}. This connects with what we have just been saying, because in many of the examples from §\ref{s:ValidityInVirtueOfForm}, the arguments can be analysed as involving canonical clauses which are linked by the structural words `and', `or', `not', `if … then …' and `… if and only if …'. So our efforts to identify the logical structure of arguments often coincide with linguist's efforts to identify the canonical clauses that constitute the sentences in those arguments – or, at least, constitute some plausible paraphrase or reformulation of those sentences.
 
 We can see this if we return to this earlier argument: \begin{earg}
 	\item[] Jenny is either happy or sad.
@@ -122,10 +119,12 @@ And we paraphrase the non-canonical clause `Jenny is not happy' as the negative 
 
 In this and the other examples above, we removed all details of the arguments except for the special words `and', `or', `not' and `if …, then …', and replaced the other clauses in the argument (or its near paraphrase) by placeholder letters `A', `B', etc. (We were careful to replace the same clause by the same placeholder every time it appeared.)
 
-Sharp-eyed readers will have noticed that our list of special words doesn't precisely line up with the canonical clauses we introduced in §\ref{ss.canonical}. Consider the non-canonical clause `She said that Jenny is sad', in which the canonical clause `Jenny is sad' is subordinate within an indirect speech report. Because `She said that' is not on our special list of words, we cannot analyse this sentence as composed from a canonical clause and some structural expression. So for the purposes of sentential logic, we will treat `She said that Jenny is sad' \emph{as if} it were canonical, even though it is not. From the point of view of our structural words, this sentence doesn't have any further structure that we can identify. Such \define{quasi-canonical clauses} – clauses that do not feature any of our list of structural words – will also be replaced by placeholder letters in our analysis.
+Sharp-eyed readers will have noticed that our list of special words doesn't precisely line up with the canonical clauses we introduced in §\ref{ss.canonical}. Consider the non-canonical clause `She said that Jenny is sad', in which the canonical clause `Jenny is sad' is subordinate within an indirect speech report. Because `She said that' is not on our special list of words, we cannot analyse this sentence as composed from a canonical clause and some structural expression. So for the purposes of sentential logic, we will treat `She said that Jenny is sad' \emph{as if} it were canonical, even though it is not from the point of view of English grammar. From the point of view of our structural words, this sentence doesn't have any further structure that we can identify. Such \define{quasi-canonical clauses} – clauses that do not feature any of our list of structural words – will also be replaced by placeholder letters in our analysis. 
 
 
-This raises another question. What makes those words special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. Linguists take a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause non-canonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed list of structural words, when using logic to model or represent natural languages. 
+This raises another question. What makes the words on our list special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. In terms of the syntactic trees we drew above, there is a hierarchy of levels when breaking down the top-level sentence into constituent phrases, and different choices of structural words correspond to different choices concerning the level at which to stop our analysis.
+
+Linguists take a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause non-canonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed list of structural words, when using logic to model or represent natural languages. 
 
 We will start simply, and focus on the list of truth-functional coordinators, principally `and', `or', `not', `if … then …' and `… if and only if …'. There are practical reasons why these words are useful ones to focus on initially, which I will now discuss.
 
@@ -133,9 +132,9 @@ We will start simply, and focus on the list of truth-functional coordinators, pr
 
 In logic, a \define{formal language} is a language which is particularly suited to representing the structure or form of its sentences. Such languages have a precisely defined \define{syntax}, that allows us to specify without difficulty the grammatical sentences of the language, and they also have a precise \define{semantics} which both tells us what meanings \emph{are} in those languages, and assigns meanings to the sentences and their constituents. 
 
-Formal languages are not the same as natural languages, like English. The languages we will be looking at are much more limited in their expressive power than English, and not subject to ambiguity or imprecision in the way that English is.  But a formal language can be very useful in \emph{representing} or modelling features of natural language. In particular, they are very good at capturing the \emph{structure} of natural language sentences and arguments. The semantics we give for such languages reflects that this is their primary use, as you will see. The languages assign fixed meanings only to those expressions which can be used to represent structure.
+Formal languages are not the same as natural languages, like English. The languages we will be looking at are much more limited in their expressive power than English, and not subject to ambiguity or imprecision in the way that English is. But a formal language can be very useful in \emph{representing} or modelling features of natural language. In particular, they are very good at capturing the \emph{structure} of natural language sentences and arguments, because we can design them specifically to represent a particular level of structural analysis. The semantics we give for such languages reflects that this is their primary use, as you will see. The languages assign fixed meanings only to those expressions which can be used to represent structure, but (unlike English) not every expression is treated as structural.
 
-In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since it will have expressions corresponding to the English coordinators `and', `or', `not' and `if …, then …' and `if and only if'. The language represents these coordintors by expressions called \define{sentence connectives}, so-called because like coordinators they allow simple sentences of the language to be combined into more complex sentences. These words are a good class to focus on in developing a formal language, because languages with expressions analogous to these feature a good balance between being useful and being well behaved and easy to study. The language we will develop is called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.) 
+In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since we are designing it to represent the sentential structure of the examples with which we began. So it will have expressions corresponding to the English coordinators `and', `or', `not' and `if …, then …' and `if and only if'. The language represents these coordinators by expressions called \define{sentence connectives}, so-called because, like coordinators, they allow simple sentences of the language to be combined into more complex sentences. These words are a good class to focus on in developing a formal language, because languages with expressions analogous to these feature a good balance between being useful and being well behaved and easy to study. The language we will develop is called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.) 
 
 Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that it has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure, when that structure involves the coordinators `and', `or', `not', `if' and various related expressions. 
 
@@ -177,6 +176,16 @@ But it is important to understand that whatever internal structure an English se
 }
 
 \practiceproblems
+
+\problempart True or false: if you are going to represent an English sentence by an atomic sentence in Sentential, the English sentence cannot have a coordinator (like ‘and’) occurring within it.
+
+\problempart Which one or more of the following are \textbf{not} atomic sentences of \TFL? \begin{earg}
+	\item $A'$;
+	\item $W_{0}$;
+	\item $Q_{5902222}$;
+	\item $77_{P}$;
+	\item $V^{9}$.
+\end{earg}
 
 \problempart This argument is invalid in English: 'There is water in the glass and it is cold; therefore it is cold'. Comment on why it is invalid, and what potential pitfalls arise when considering how to symbolise this argument into \TFL. 
 
@@ -270,7 +279,7 @@ Sentence \ref{and5} says one thing about two different subjects. It says of both
 
 Sentence \ref{and6} is slightly more complicated. The word `although' sets up a contrast between the first part of the sentence and the second part. Nevertheless, the sentence tells us both that Barbara is energetic and that she is not athletic. In order to make each of the conjuncts an atomic sentence, we need to replace `she' with `Barbara'. So we can paraphrase sentence \ref{and6} as, `\emph{Both} Barbara is energetic, \emph{and} Barbara is not athletic'. The second conjunct contains a negation, so we paraphrase further: `\emph{Both} Barbara is energetic \emph{and} \emph{it is not the case that} Barbara is athletic'. And now we can symbolise this with the \TFL\ sentence `$(E\eand\enot B)$'. Note that we have lost all sorts of nuance in this symbolisation. There is a distinct difference in tone between sentence \ref{and6} and `Both Barbara is energetic and it is not the case that Barbara is athletic'. \TFL\ does not (and cannot) preserve these nuances.
 
-Sentence \ref{and7} raises similar issues. There is a contrastive structure, but this is not something that \TFL\ can deal with. So we can paraphrase the sentence as `\emph{Both} Adam is athletic, \emph{and} Barbara is more athletic than Adam'. (Notice that we once again replace the pronoun `him' with `Adam'.) How should we deal with the second conjunct? We already have the sentence letter `$A$', which is being used to symbolise `Adam is athletic', and the sentence `$B$' which is being used to symbolise `Barbara is athletic'; but neither of these concerns their relative athleticity. So, to to symbolise the entire sentence, we need a new sentence letter. Let the \TFL\ sentence `$R$' symbolise the English sentence `Barbara is more athletic than Adam'. Now we can symbolise sentence \ref{and7} by `$(A \eand R)$'.
+Sentence \ref{and7} raises similar issues. There is a contrastive structure, but this is not something that \TFL\ can deal with. So we can paraphrase the sentence as `\emph{Both} Adam is athletic, \emph{and} Barbara is more athletic than Adam'. (Notice that we once again replace the pronoun `him' with `Adam'.) How should we deal with the second conjunct? We already have the sentence letter `$A$', which is being used to symbolise `Adam is athletic', and the sentence `$B$' which is being used to symbolise `Barbara is athletic'; but neither of these concerns their relative `athleticity'. So, to to symbolise the entire sentence, we need a new sentence letter. Let the \TFL\ sentence `$R$' symbolise the English sentence `Barbara is more athletic than Adam'. Now we can symbolise sentence \ref{and7} by `$(A \eand R)$'.
 	\factoidbox{
 		A sentence can be symbolised as $(\meta{A}\eand\meta{B})$ if it can be paraphrased in English as `Both …, and …', or as `…, but …', or as `although …, …'.
 	}
